--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/bookclub
 spring.datasource.username=root
-spring.datasource.password=BroDy_doG$%20_
+spring.datasource.password=password
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.jpa.hibernate.ddl-auto=update
